pre 0.1.0 release. WebUI, webhooks and other
Introduces a FastAPI-based web dashboard with metrics, guild management, and log viewing. Refactors bot configuration to support a persistent bot.json, multi-language welcome messages, and a new /config command with interactive UI for AI and webhook settings. Updates requirements and .gitignore for new dependencies and database file. Adds metrics collection, SQLite persistence, and web static assets for dashboard UI.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Environment variables
 .env
+.cursor/*
 
 # Generic data
 /guilds/*
@@ -8,3 +9,6 @@
 # Cache
 __pycache__/
 *.pyc
+
+# Database
+metrics.db
